--- a/.github/workflows/basic_checks.yaml
+++ b/.github/workflows/basic_checks.yaml
@@ -13,6 +13,8 @@ jobs:
 
       - name: Query dependencies and update old packages
         run: |
+          install.packages('remotes')
+          options(repos = c(CRAN = 'https://cran.r-project.org'))
           BiocManager::install(ask=FALSE)
           saveRDS(remotes::dev_package_deps(dependencies = TRUE), ".github/depends.Rds", version = 2)
         shell: Rscript {0}
@@ -48,7 +50,15 @@ jobs:
           _R_CHECK_CRAN_INCOMING_REMOTE_: false
         run: rcmdcheck::rcmdcheck(args = c("--no-manual"), error_on = "warning", check_dir = "check")
         shell: Rscript {0}
-      
+
+      - uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: yunshun/singlecellworkshop
+          tag_with_ref: true
+          tag_with_sha: true
+          tags: latest
 
       - name: Build pkgdown
         run: |
@@ -66,20 +76,3 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
           FOLDER: docs # The folder the action should deploy.
-
-      - uses: docker/build-push-action@v1
-        with:
-          # The two entries below need to be entered as 
-          # github secrets. The "secret" names are "DOCKER_USERNAME"
-          # and "DOCKER_PASSWORD". See https://docs.github.com/en/actions/reference/encrypted-secrets#creating-encrypted-secrets-for-a-repository
-          # for detailed instructions. 
-          #
-          # DO NOT EDIT THESE ENTRIES HERE. Doing so will 
-          # expose your docker username and password on github.
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          # Use the environment variable on first few lines to set repo name--just centralizes changes
-          repository: ${{ env.repo-name }}
-          tag_with_ref: true
-          tag_with_sha: true
-          tags: latest
