--- a/.github/workflows/basic_checks.yaml
+++ b/.github/workflows/basic_checks.yaml
@@ -1,4 +1,10 @@
 on: [push]
+
+env:
+  cache-version: v2
+  repo-name: yunshun/SingleCellWorkshop
+  GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   job1:
     runs-on: ubuntu-latest
