--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Authors@R:
            comment = c(ORCID = "0000-0003-4911-5653"))
 Description: This package describes a detailed workflow of a single cell
     RNA-seq analysis.
-License: GPL-3
+License: Artistic-2.0
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
