--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
 Depends: 
-    Seurat, edgeR, vcd, scales
+    Seurat, edgeR, vcd, scales, pheatmap
 Suggests: 
     knitr,
     rmarkdown,
