--- a/.github/workflows/basic_checks.yaml
+++ b/.github/workflows/basic_checks.yaml
@@ -1,7 +1,7 @@
 on: [push]
 
 env:
-  #cache-version: v2
+  cache-version: v2
   repo-name: yunshun/SingleCellWorkshop
   GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
